feat: implement DLCSStrategy, split the code into multiple files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(sat-solver)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(sat-solver src/main.cpp)
+add_executable(sat-solver src/main.cpp src/Formula.cpp src/Formula.h src/strategies/branching/DLCSStrategy.cpp src/strategies/branching/DLCSStrategy.h src/strategies/branching/BranchingStrategy.h)
+target_include_directories(sat-solver PUBLIC src/)
